# ZoteroPDF_2_MD

./: .gitignore  README.md  app.py  debug_translate_stop_on_fallback.py  pyproject.toml  run_gui_latest.ps1  run_headless.py  run_webdav_gui.py  setup_latest_env.ps1  zotero_test_note_sketch.py
.claude/: settings.local.json
docs/: IMPLEMENTATION_PLAN.md  RU_HTML_DEFECTS_PLAN.md  TRANSLATION_BATCH_PROTOCOL_PLAN.md  UNIVERSALITY_AUDIT.md
md_output/intracranial_compare/intracranial_pressure_01/: intracranial_pressure_01.en.html  intracranial_pressure_01.html  intracranial_pressure_01.ru.html  intracranial_pressure_01.ru.single.html
md_output_benchmark/: _source_filename_map.csv
src/zoteropdf2md/: __init__.py  abbreviations.py  attachments.py  export_modes.py  gui.py  history.py  llm_bundle.py  marker_runner.py  models.py  naming.py  output_state.py  paths.py  pipeline.py  runtime_temp.py  single_file_html.py  staging.py  translategemma.py  webdav_config.py  webdav_gui.py  webdav_uploader.py  zotero.py  zotero_html_attachment.py  zotero_pending.py
tests/: test_export_modes.py  test_llm_bundle.py  test_paths_profiles.py  test_pipeline_selection.py  test_single_file_html.py  test_staging.py  test_translategemma_html.py  test_zotero_html_attachment.py  test_zotero_pending.py
